tests/it/const_ctor/too_long_fractional.stderr
error: constant evaluation is taking a long time
 --> src/const_fn.rs
  |
  |     const_assert!(exp <= coef);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
          If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
 --> tests/it/const_ctor/too_long_fractional.rs:7:36
  |
7 | const VALUE: FixedPoint<i64, U9> = fixnum_const!(0.1234567891, 9);
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: `#[deny(long_running_const_eval)]` on by default
  = note: this error originates in the macro `const_assert` which comes from the expansion of the macro `fixnum_const` (in Nightly builds, run with -Z macro-backtrace for more info)
